--- a/main/frontend/public/index.html
+++ b/main/frontend/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=YOUR_CLIENT_ID&submodules=geocoder"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
